java-app/build_log_3.txt
> Task :app:clean

> Task :app:compileJava
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/C:/Users/ADMIN/.gradle/wrapper/dists/gradle-8.8-bin/dl7vupf4psengwqhwktix4v1/gradle-8.8/lib/native-platform-0.22-milestone-26.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

D:\Projects\WGCinema\java-app\app\src\main\java\com\joshiminh\wgcinema\ui\booking\CheckoutDialog.java:207: error: cannot find symbol
            return formatPrice(0);
                   ^
  symbol:   method formatPrice(int)
  location: class CheckoutDialog
D:\Projects\WGCinema\java-app\app\src\main\java\com\joshiminh\wgcinema\ui\booking\CheckoutDialog.java:240: error: cannot find symbol
                BigDecimal revenueBD = PriceUtils.parsePrice(totalPriceString);
                ^
  symbol:   class BigDecimal
  location: class CheckoutDialog
Note: D:\Projects\WGCinema\java-app\app\src\main\java\com\joshiminh\wgcinema\util\PriceUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

> Task :app:compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 3s
2 actionable tasks: 2 executed
